--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -13,5 +14,8 @@
     "knex": "^0.15.2",
     "morgan": "~1.9.0",
     "pg": "^7.5.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.4"
   }
 }
