--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "http-errors": "~1.6.2",
     "knex": "^0.15.2",
     "morgan": "~1.9.0",
-    "pg": "^7.5.0"
+    "pg": "^7.5.0",
+    "validator": "^10.8.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
