--- a/server/package.json
+++ b/server/package.json
@@ -7,12 +7,14 @@
     "dev": "nodemon"
   },
   "dependencies": {
+    "bcrypt": "^3.0.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "knex": "^0.15.2",
     "morgan": "~1.9.0",
+    "node-gyp": "^3.8.0",
     "pg": "^7.5.0",
     "validator": "^10.8.0"
   },
