--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "bcrypt": "^3.0.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^6.1.0",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "knex": "^0.15.2",
