--- a/anovalabs_client/package.json
+++ b/anovalabs_client/package.json
@@ -26,7 +26,8 @@
   "homepage": "https://github.com/ANovaBerkeley/anovalabs#readme",
   "dependencies": {
     "react": "^16.6.0",
-    "react-dom": "^16.6.0"
+    "react-dom": "^16.6.0",
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
