--- a/anovalabs_client/package.json
+++ b/anovalabs_client/package.json
@@ -4,8 +4,11 @@
   "description": "Client for ANova Labs",
   "main": "index.js",
   "scripts": {
+    "build": "webpack --mode production",
     "start": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack --mode production"
+    "eslint-check": "eslint --print-config . | eslint-config-prettier-check",
+    "lint": "eslint src/** src/**/**; exit 0",
+    "lint-fix": "eslint src/** src/**/** --fix; exit 0"
   },
   "repository": {
     "type": "git",
@@ -18,14 +21,17 @@
     "Science",
     "Education"
   ],
-  "author": "Christopher Franco",
+  "author": "Christopher Franco Monterrosa",
+  "contributors": [],
   "license": "AGPL-3.0",
   "bugs": {
     "url": "https://github.com/ANovaBerkeley/anovalabs/issues"
   },
   "homepage": "https://github.com/ANovaBerkeley/anovalabs#readme",
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "axios": "^0.18.0",
+    "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1"
@@ -34,14 +40,18 @@
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
     "eslint": "^5.9.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.3.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-flowtype": "^2.50.3",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
+    "eslint-watch": "^4.0.2",
     "html-webpack-plugin": "^3.2.0",
     "prettier": "^1.15.2",
     "webpack": "^4.23.1",
