--- a/anovalabs_client/package.json
+++ b/anovalabs_client/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "build": "webpack --mode production",
     "start": "webpack-dev-server --mode development --open --hot",
-    "eslint-check": "eslint --print-config . | eslint-config-prettier-check",
     "lint": "eslint src/** src/**/**; exit 0",
-    "lint-fix": "eslint src/** src/**/** --fix; exit 0"
+    "lint-fix": "eslint src/** src/**/** --fix; exit 0",
+    "eslint-check": "eslint --print-config . | eslint-config-prettier-check"
   },
   "repository": {
     "type": "git",
@@ -51,7 +51,6 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
-    "eslint-watch": "^4.0.2",
     "html-webpack-plugin": "^3.2.0",
     "prettier": "^1.15.2",
     "webpack": "^4.23.1",
