--- a/anovalabs_client/package.json
+++ b/anovalabs_client/package.json
@@ -28,17 +28,17 @@
     "url": "https://github.com/ANovaBerkeley/anovalabs/issues"
   },
   "homepage": "https://github.com/ANovaBerkeley/anovalabs#readme",
-  "proxy": "http://localhost:5000",
   "dependencies": {
     "axios": "^0.18.0",
+    "joi": "^14.3.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/core": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
@@ -53,7 +53,7 @@
     "eslint-plugin-react": "^7.11.1",
     "html-webpack-plugin": "^3.2.0",
     "prettier": "^1.15.2",
-    "webpack": "^4.23.1",
+    "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
   }
