--- a/anovalabs_client/package.json
+++ b/anovalabs_client/package.json
@@ -29,15 +29,18 @@
   },
   "homepage": "https://github.com/ANovaBerkeley/anovalabs#readme",
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/runtime": "^7.2.0",
     "axios": "^0.18.0",
-    "joi": "^14.3.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "yup": "^0.26.6"
   },
   "devDependencies": {
     "@babel/core": "^7.2.0",
+    "@babel/plugin-proposal-class-properties": "^7.2.1",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
