--- a/anovalabs_server/package.json
+++ b/anovalabs_server/package.json
@@ -14,12 +14,12 @@
     "dotenv": "^6.1.0",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "joi": "^14.3.0",
     "jsonwebtoken": "^8.4.0",
     "knex": "^0.15.2",
     "morgan": "~1.9.0",
     "node-gyp": "^3.8.0",
-    "pg": "^7.5.0",
-    "validator": "^10.8.0"
+    "pg": "^7.5.0"
   },
   "devDependencies": {
     "eslint": "^5.9.0",
