added user, modified post signup

--- a/anovalabs_server/package.json
+++ b/anovalabs_server/package.json
@@ -19,7 +19,8 @@
     "knex": "^0.15.2",
     "morgan": "~1.9.0",
     "node-gyp": "^3.8.0",
-    "pg": "^7.5.0"
+    "pg": "^7.5.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "eslint": "^5.9.0",
