--- a/anovalabs_client/package.json
+++ b/anovalabs_client/package.json
@@ -32,10 +32,12 @@
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/runtime": "^7.2.0",
     "axios": "^0.18.0",
+    "css-loader": "^2.1.1",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1",
+    "style-loader": "^0.23.1",
     "yup": "^0.26.6"
   },
   "devDependencies": {
@@ -58,6 +60,6 @@
     "prettier": "^1.15.2",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.2.1"
   }
 }
