--- a/anovalabs_client/package.json
+++ b/anovalabs_client/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/runtime": "^7.2.0",
+    "antd": "^3.15.1",
     "axios": "^0.18.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
