--- a/anovalabs_client/package.json
+++ b/anovalabs_client/package.json
@@ -36,6 +36,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-router": "^5.0.0",
     "react-router-dom": "^4.3.1",
     "style-loader": "^0.23.1",
     "yup": "^0.26.6"
