--- a/anovalabs_client/package.json
+++ b/anovalabs_client/package.json
@@ -31,11 +31,15 @@
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/runtime": "^7.2.0",
+    "antd": "^3.15.1",
     "axios": "^0.18.0",
+    "css-loader": "^2.1.1",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1",
+    "style-loader": "^0.23.1",
+    "tachyon": "0.0.11",
     "yup": "^0.26.6"
   },
   "devDependencies": {
