--- a/anovalabs_client/package.json
+++ b/anovalabs_client/package.json
@@ -35,6 +35,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-icons": "^3.5.0",
     "react-router-dom": "^4.3.1",
     "yup": "^0.26.6"
   },
