--- a/anovalabs_client/package.json
+++ b/anovalabs_client/package.json
@@ -58,7 +58,9 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^4.6.0",
     "prettier": "^1.15.2",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
