--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "name": "anovalabs",
   "version": "1.0.0",
   "scripts": {
-    "postinstall": "npm install --prefix anovalabs_server && npm install --prefix anovalabs_client"
+  	"heroku-prebuild": "npm install --dev",
   }
 }
