--- a/anovalabs_client/package.json
+++ b/anovalabs_client/package.json
@@ -4,6 +4,7 @@
   "description": "Client for ANova Labs",
   "main": "index.js",
   "scripts": {
+    "heroku-prebuild": "npm install --dev",
     "build": "webpack --mode production",
     "start": "webpack-dev-server --mode development --open --hot",
     "lint": "eslint src/** src/**/**; exit 0",
