--- a/anovalabs_client/package.json
+++ b/anovalabs_client/package.json
@@ -4,8 +4,10 @@
   "description": "Client for ANova Labs",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode production",
-    "start": "webpack-dev-server --mode development --open --hot",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "lint": "eslint src/** src/**/**; exit 0",
     "lint-fix": "eslint src/** src/**/** --fix; exit 0",
     "eslint-check": "eslint --print-config . | eslint-config-prettier-check"
@@ -27,17 +29,18 @@
   "bugs": {
     "url": "https://github.com/ANovaBerkeley/anovalabs/issues"
   },
-  "homepage": "https://github.com/ANovaBerkeley/anovalabs#readme",
   "dependencies": {
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/runtime": "^7.2.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-scripts": "3.4.0",
     "antd": "^3.15.1",
     "axios": "^0.18.1",
     "css-loader": "^2.1.1",
     "jwt-decode": "^2.2.0",
     "prop-types": "^15.7.2",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
     "react-icons": "^3.5.0",
     "react-router": "^5.0.0",
     "react-router-dom": "^4.3.1",
@@ -45,30 +48,23 @@
     "tachyon": "0.0.11",
     "yup": "^0.26.6"
   },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "proxy": "http://localhost:5000",
   "devDependencies": {
-    "@babel/core": "^7.2.0",
-    "@babel/plugin-proposal-class-properties": "^7.2.1",
-    "@babel/preset-env": "^7.2.0",
-    "@babel/preset-react": "^7.0.0",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.4",
-    "css-loader": "^2.1.1",
-    "eslint": "^5.9.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.3.0",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-flowtype": "^2.50.3",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-prettier": "^3.0.0",
-    "eslint-plugin-react": "^7.14.3",
-    "file-loader": "^3.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "image-webpack-loader": "^4.6.0",
-    "prettier": "^1.15.2",
-    "style-loader": "^0.23.1",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.10.3"
+    "prettier": "^1.19.1"
   }
 }
