--- a/package.json
+++ b/package.json
@@ -1,7 +1,55 @@
 {
-  "name": "anovalabs",
+  "name": "anovalabs-api",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
-  	"heroku-prebuild": "npm install --dev"
+    "start": "node ./bin/www",
+    "dev": "nodemon",
+    "server": "nodemon index.js",
+    "test": "(dropdb --if-exists test-anovalabs-db && createdb test-anovalabs-db) && mocha --exit",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/ANovaBerkeley/anovalabs.git"
+  },
+  "keywords": [
+    "EdTech",
+    "Mentorship",
+    "Computer",
+    "Science",
+    "Education"
+  ],
+  "author": "Christopher Franco Monterrosa",
+  "contributors": [],
+  "license": "AGPL-3.0",
+  "bugs": {
+    "url": "https://github.com/ANovaBerkeley/anovalabs/issues"
+  },
+  "dependencies": {
+    "bcrypt": "^3.0.6",
+    "cookie-parser": "~1.4.3",
+    "cors": "^2.8.5",
+    "css-loader": "^2.1.1",
+    "debug": "~2.6.9",
+    "dotenv": "^6.1.0",
+    "express": "~4.16.0",
+    "http-errors": "~1.6.2",
+    "joi": "^14.3.0",
+    "jsonwebtoken": "^8.4.0",
+    "knex": "^0.20.11",
+    "morgan": "~1.9.0",
+    "node-gyp": "^6.1.0",
+    "pg": "^7.5.0",
+    "request": "^2.88.0",
+    "style-loader": "^0.23.1",
+    "uuid": "^3.3.2"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.2.2",
+    "nodemon": "^2.0.2",
+    "prettier": "^1.19.1",
+    "supertest": "^4.0.2"
   }
 }
