--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "anovalabs",
   "version": "1.0.0",
   "description": "Client for ANova Labs",
   "main": "index.js",
