--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "anovalabs-api",
+  "name": "anovalabs",
   "version": "1.0.0",
-  "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "nodemon",
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development nodemon index.js",
     "server": "nodemon index.js",
     "test": "(dropdb --if-exists test-anovalabs-db && createdb test-anovalabs-db) && mocha --exit",
     "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
