--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "anovalabs",
   "version": "1.0.0",
   "scripts": {
-    "start": "NODE_ENV=production node index.js",
+    "start": "node index.js",
     "dev": "NODE_ENV=development nodemon index.js",
     "server": "nodemon index.js",
     "test": "(dropdb --if-exists test-anovalabs-db && createdb test-anovalabs-db) && mocha --exit",
