deployment setup complete and testing works by running npm run test

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,4 @@
-SALT_ROUNDS =
-COOKIE_SECRET = plz dont share
-JWT_SECRET=anovayay
-PG_HOST=
-PG_USER=
-PG_PASSWORD=
-PG_NAME=
+SALT_ROUNDS=
+JWT_SECRET=
+DATABASE_URL=postgres://localhost/anovalabs-db
+TEST_DATABASE_URL=postgres://localhost/test-anovalabs-db
