--- a/package.json
+++ b/package.json
@@ -33,13 +33,12 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.6",
-    "cookie-parser": "~1.4.3",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "css-loader": "^2.1.1",
     "debug": "~2.6.9",
-    "dotenv": "^6.1.0",
+    "dotenv": "^6.2.0",
     "express": "~4.16.0",
-    "http-errors": "~1.6.2",
     "joi": "^14.3.0",
     "jsonwebtoken": "^8.4.0",
     "knex": "^0.20.11",
