--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "morgan": "~1.9.0",
     "node-gyp": "^6.1.0",
     "pg": "^8.3.3",
+    "react-contenteditable": "^3.3.4",
     "request": "^2.88.0",
     "style-loader": "^0.23.1",
     "uuid": "^3.3.2"
