Integrate Google OAuth for login

--- a/client/package.json
+++ b/client/package.json
@@ -29,17 +29,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0",
     "antd": "^3.15.1",
     "axios": "^0.18.1",
     "css-loader": "^2.1.1",
     "jwt-decode": "^2.2.0",
     "prop-types": "^15.7.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.13.0",
+    "react-google-login": "^5.1.21",
     "react-icons": "^3.5.0",
     "react-router": "^5.0.0",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.0",
     "style-loader": "^0.23.1",
     "tachyon": "0.0.11",
     "yup": "^0.26.6"
