--- a/package.json
+++ b/package.json
@@ -39,12 +39,13 @@
     "debug": "~2.6.9",
     "dotenv": "^6.2.0",
     "express": "~4.16.0",
+    "google-auth-library": "^6.1.3",
     "joi": "^14.3.0",
     "jsonwebtoken": "^8.4.0",
-    "knex": "^0.20.13",
+    "knex": "^0.21.5",
     "morgan": "~1.9.0",
     "node-gyp": "^6.1.0",
-    "pg": "^7.18.2",
+    "pg": "^8.3.3",
     "request": "^2.88.0",
     "style-loader": "^0.23.1",
     "uuid": "^3.3.2"
