Add CLIENT_ID to .env.example

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ SALT_ROUNDS=
 JWT_SECRET=
 DATABASE_URL=postgres://localhost/anovalabs-db
 TEST_DATABASE_URL=postgres://localhost/test-anovalabs-db
+CLIENT_ID=
