Added OAuth client ID

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@ SALT_ROUNDS=
 JWT_SECRET=
 DATABASE_URL=postgres://localhost/anovalabs-db
 TEST_DATABASE_URL=postgres://localhost/test-anovalabs-db
-CLIENT_ID=
+CLIENT_ID=128601698558-80ae6kq3v7p8iuknfpkqu6bsfg05vgra.apps.googleusercontent.com
