--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "debug": "~2.6.9",
     "dotenv": "^6.2.0",
     "draft-js": "^0.11.7",
+    "draft-js-plugins-editor": "^3.0.0",
     "express": "~4.16.0",
     "google-auth-library": "^6.1.6",
     "joi": "^14.3.0",
