--- a/client/package.json
+++ b/client/package.json
@@ -32,10 +32,12 @@
     "antd": "^3.26.18",
     "axios": "^0.21.1",
     "css-loader": "^2.1.1",
+    "draft-js": "^0.11.7",
+    "draft-js-plugins-editor": "^3.0.0",
     "jwt-decode": "^2.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "^16.14.0",
     "react-google-login": "^5.2.2",
     "react-icons": "^3.11.0",
     "react-router": "^5.2.0",
