--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "pg": "^8.3.3",
     "react-contenteditable": "^3.3.4",
     "request": "^2.88.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "style-loader": "^0.23.1",
     "uuid": "^3.3.2"
   },
